# web_dz12

dz 11/: main.py  pyproject.toml
dz 11/src/: schemas.py
dz 11/src/conf/: config.py
dz 11/src/database/: db.py
dz 11/src/routes/: auth.py
dz 11/src/services/: auth.py
